Closed
Bug 744607
Opened 14 years ago
Closed 14 years ago
scroll causes lines in webpage
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla14
People
(Reporter: xxbones21xx, Assigned: roc)
References
Details
Attachments
(2 files)
|
203.07 KB,
image/png
|
Details | |
|
4.56 KB,
patch
|
tnikkel
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120411 Firefox/14.0a1
Build ID: 20120411030716
Steps to reproduce:
I used the middle button to scroll through a webpage after Nightly's 4-11-12 update.
Actual results:
Its scrolled correctly but caused there to be lines appearing wear the page was scrolled.
Expected results:
Not this. Should have just scrolled and left the contents of the page untouched.
| Reporter | ||
Comment 1•14 years ago
|
||
When i removed multirow bookmarks toolbar plus, then lines didnt appear anymore.
Caused by http://hg.mozilla.org/integration/mozilla-inbound/rev/25a13d26509d
Link to the mentioned extension https://addons.mozilla.org/en-US/firefox/addon/multirow-bookmarks-toolbarplus
Roc, is this a regression or just an incompatible extension?
Blocks: 733607
Status: UNCONFIRMED → NEW
Component: Untriaged → Graphics
Ever confirmed: true
Product: Firefox → Core
QA Contact: untriaged → thebes
Version: 14 Branch → Trunk
| Assignee | ||
Comment 3•14 years ago
|
||
Probably not the extension.
Comment 4•14 years ago
|
||
Do we snap the clip rect everywhere properly in FrameLayerBuilder?
Comment 5•14 years ago
|
||
I also notice this in current nightly build when scrolling iframes.
Possible duplicate: bug #744666
| Assignee | ||
Comment 6•14 years ago
|
||
We need to make sure that stuff outside the snapped clip rect isn't included in the layer's visible region. This patch does that.
The change to nsDisplayClip::GetBounds doesn't really matter --- nothing uses this snap output --- but it's more correct; mClip's edges can be snapped, but the edges of the bounds of the wrapped list cannot be snapped.
Assignee: nobody → roc
Attachment #614669 -
Flags: review?(tnikkel)
Comment 7•14 years ago
|
||
(In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #6)
> The change to nsDisplayClip::GetBounds doesn't really matter --- nothing
> uses this snap output --- but it's more correct; mClip's edges can be
> snapped, but the edges of the bounds of the wrapped list cannot be snapped.
So technically it should just leave aSnap alone and let nsDisplayWrapList::GetBounds set it?
Updated•14 years ago
|
Attachment #614669 -
Flags: review?(tnikkel) → review+
| Assignee | ||
Comment 8•14 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/e339ca6c2f11(In reply to Timothy Nikkel (:tn) from comment #7)
> (In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #6)
> > The change to nsDisplayClip::GetBounds doesn't really matter --- nothing
> > uses this snap output --- but it's more correct; mClip's edges can be
> > snapped, but the edges of the bounds of the wrapped list cannot be snapped.
>
> So technically it should just leave aSnap alone and let
> nsDisplayWrapList::GetBounds set it?
I suppose, but it doesn't matter.
| Assignee | ||
Comment 9•14 years ago
|
||
Comment 12•14 years ago
|
||
fwiw, this seems to be happening on my galexy tab, as well.
OS: Windows 7 → All
Hardware: x86_64 → All
Comment 13•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in
before you can comment on or make changes to this bug.
Description
•