Bug 744607. Intersect a display item's layer-pixels draw-rect with the snapped clip rect. r=tnikkel